--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
   "name": "primetimetran-npm-counter",
   "version": "0.1.0",
+  "keywords": ["react", "components", "ui"],
+  "private": false,
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "files": [ "dist", "README.md" ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/PrimeTimeTran/npm-counter"
+  },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "@testing-library/jest-dom": "^5.16.5",
