--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "primetimetran-npm-counter",
-  "version": "0.1.0",
-  "keywords": ["react", "components", "ui"],
+  "version": "0.1.1",
+  "keywords": [
+    "react",
+    "components",
+    "ui"
+  ],
   "private": false,
   "main": "dist/index.js",
   "module": "dist/index.js",
-  "files": [ "dist", "README.md" ],
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/PrimeTimeTran/npm-counter"
